Refatoração em Emprestimo e Melhoria de código
